[package]
name = "extra-utils"
version = "0.1.0"
description = "Set of additional command line utilities"

homepage = "https://github.com/jayden-chan/utils/README.md"
documentation = "https://github.com/jayden-chan/utils/README.md"
readme = "README.md"
repository = "https://github.com/jayden-chan/utils.git"

authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "ts"
path = "src/ts.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.6"
