[package]
name = "extra-utils"
version = "0.4.1"
description = "Set of additional command line utilities"

homepage = "https://github.com/jayden-chan/extra-utils/README.md"
documentation = "https://github.com/jayden-chan/extra-utils/README.md"
readme = "README.md"
repository = "https://github.com/jayden-chan/extra-utils.git"

authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "nr"
path = "src/nr.rs"

[[bin]]
name = "nth"
path = "src/nth.rs"

[[bin]]
name = "ts"
path = "src/ts.rs"

[[bin]]
name = "st"
path = "src/st.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.6"
futures = "*"
hyper = "*"
lazy_static = "*"
maplit = "*"
